--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,3 +6,7 @@
 .btn-cal {
     @apply border-2 rounded-full border-slate-700 shadow-inner-btn py-[1.4rem] bg-slate-300 transition-all duration-100 ease-out hover:bg-slate-500 hover:text-white active:scale-90;
 }
+
+.btn-link {
+    @apply border-2 p-4 border-slate-700 bg-slate-500 rounded-xl uppercase mt-4 font-bold transition-all duration-100 text-white ease-out hover:bg-slate-300 hover:text-black active:scale-90 shadow-inner-btn-link;
+}
