--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -24,13 +24,63 @@
     @apply rounded-xl  py-[0.8rem] md:py-[1.4rem]  transition-all duration-100 ease-linear active:shadow-none active:translate-y-2;
 }
 .btn-primary {
-    @apply bg-white;
+    @apply bg-white border-4 border-[#dde1e0];
 }
 .btn-secondary {
-    @apply bg-color-secondary text-white;
+    @apply bg-color-secondary text-white border-4 border-[rgba(0,168,143,1)];
 }
 
 .btn-3d {
     @apply p-4 bg-color-secondary rounded-lg relative uppercase mt-4 transition-all duration-100 ease-in shadow-xl active:shadow-none active:translate-y-2 font-bold;
     box-shadow: 0 8px 0 rgba(0,168,143,1);
+}
+
+.animation-cursor {
+    position: relative;
+  }
+  
+  .animation-cursor::after {
+    content: '';
+    position: absolute;
+    right: -10;
+    top: 0;
+    width: 5px;
+    height: 100%;
+    background-color: #22eb76; /* warna hijau sesuai dengan Tailwind CSS green-400 */
+    animation: cursorInput 1s linear infinite;
+  }
+  
+  @keyframes cursorInput{
+    0%,
+    100% {
+      height: 100%;
+      top: 0;
+    }
+    50% {
+      top: 50%;
+      height: 0;
+    }
+  }
+
+@layer utilities {
+    @variants responsive {
+        .text-stroke-0 {
+            -webkit-text-stroke-width: 0px;
+            -webkit-text-stroke-color: black;
+        }
+        .text-stroke-1 {
+            -webkit-text-stroke-width: 1px;   
+            -webkit-text-stroke-color: black;
+
+        }
+        .text-stroke-2 {
+            -webkit-text-stroke-width: 2px;    
+            -webkit-text-stroke-color: black;
+
+        }
+        .text-stroke-3 {
+            -webkit-text-stroke-width: 3px;
+            -webkit-text-stroke-color: black;
+        }
+    }
 }
